--- a/workshop/content/parksmap-rsh.adoc
+++ b/workshop/content/parksmap-rsh.adoc
@@ -20,17 +20,15 @@ You should an output similar to the following:
 
 [source,bash]
 ----
-NAME                READY   STATUS      RESTARTS   AGE
-parksmap-1-deploy   0/1     Completed   0          3h15m
-parksmap-2-deploy   0/1     Completed   0          172m
-parksmap-2-mcjsw    1/1     Running     0          172m
+NAME                        READY   STATUS    RESTARTS   AGE
+parksmap-65c4f8b676-fxcrq   1/1     Running   0          52m
 ----
 
 Now you can establish a remote shell session into the pod by using the pod name:
 
 [source,bash,role=copy-and-edit]
 ----
-oc rsh parksmap-2-mcjsw
+oc rsh parksmap-65c4f8b676-fxcrq
 ----
 
 You would see the following output:
